--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title:       The twelveand0 Blog
+title:       twelveand0's Blog
 # email:       
 author:      bingchang
 description: "The twelveand0's Blog"
