--- a/_config.yml
+++ b/_config.yml
@@ -25,11 +25,11 @@ paypal_url:
 flattr_button:
 
 # Build settings
-markdown:     kramdown #redcarpet
-permalink:    pretty
-paginate:     3
-sass:
-  compressed: true
+#markdown:     kramdown #redcarpet
+#permalink:    pretty
+#paginate:     3
+#sass:
+#  compressed: true
 
 
 theme: jekyll-theme-midnight
