--- a/_config.yml
+++ b/_config.yml
@@ -26,10 +26,10 @@ flattr_button:
 
 # Build settings
 #markdown:     kramdown #redcarpet
-#permalink:    pretty
+permalink:    pretty
 paginate:     3
-#sass:
-#  compressed: true
+sass:
+  compressed: true
 
 
 theme: jekyll-theme-midnight
