--- a/_config.yml
+++ b/_config.yml
@@ -28,8 +28,8 @@ flattr_button:
 #markdown:     kramdown #redcarpet
 permalink:    pretty
 paginate:     3
-sass:
-  compressed: true
+#sass:
+#  compressed: true
 
 
 theme: jekyll-theme-midnight
